--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -40,6 +40,7 @@ v0.39.2-dev (SVN)
 + Bug: ChatLounge and MechView now indicate if a unit has an invalid design
 + Feature [#1289]: Require Commander to be chosen prior to starting a battle
     that has the "Kill Commander" option selected. 
++ Bug: Fixed mine dispensers to work according with rules in TO p.325 
     
 
 v0.39.1 (2014-08-26 14:56 UTC)
