--- a/trunk/megamek/l10n/megamek/common/report-messages.properties
+++ b/trunk/megamek/l10n/megamek/common/report-messages.properties
@@ -125,6 +125,7 @@
 2235=<data> (<data>) is displaced into hex <data>.
 2240=<data> (<data>) is displaced into hex <data>, violating stacking with <data> (<data>).
 2245=<data> attempts to clear a(n) <data> mine in hex <data>:
+2246=<data> attempts to clear a(n) <data> mine in hex <data> with mine clearance manipulators:
 2250=<data> needs <data>, rolls <data>: minefield cleared.
 2255=<data> needs <data>, rolls <data>: minefield is accidently detonated!
 2260=<data> needs <data>, rolls <data>: minefield clearance fails.
