--- a/trunk/megamek/l10n/megamek/common/report-messages.properties
+++ b/trunk/megamek/l10n/megamek/common/report-messages.properties
@@ -707,6 +707,7 @@
 6250=<font color='C00000'>Torso weapon B destroyed.</font>
 6255=<font color='C00000'><data>  will stop functioning at end of turn.</font>
 6260=<font color='C00000'><data> (<data>) has lost its movement and crashes.  </font>
+6261=<font color='C00000'><data> (<data>) has lost its crew and crashes.  </font>
 6265=However, it's already on the ground, so no harm done.
 6270=<font color='C00000'>It plummets <data> levels to the ground.</font>
 6275=<font color='C00000'>It falls into water and is destroyed.</font>
