--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -53,6 +53,8 @@ v0.39.2-dev (SVN)
 + Bug [#4234]: Implemented Mine clearance manipulators for BA
 + Bug [#4177]: VTOLs not crashing with killed crew critical
 + Bug [#4253]: Jumping 'mechs should be unable to unload mechanized BA
++ Feature [#1291]: Renamed WeaponComparator to WeaponComparatorBV and added
+    range and damage
 
 v0.39.1 (2014-08-26 14:56 UTC)
 + Patch [#458]: Highlighting FOV options
