--- a/trunk/megamek/l10n/megamek/client/messages.properties
+++ b/trunk/megamek/l10n/megamek/client/messages.properties
@@ -984,6 +984,13 @@ MechDisplay.UnusedSpace=Unused Space:
 MechDisplay.Weapon=Weapon
 MechDisplay.Variable=Variable
 MechDisplay.WasAutomaticlyShutDown=Was automaticly shut down\n
+MechDisplay.WeaponSortOrder.label=Weapon Order:
+MechDisplay.WeaponSortOrder.DEFAULT=Default
+MechDisplay.WeaponSortOrder.RANGE_LH=Range (Low-High)
+MechDisplay.WeaponSortOrder.RANGE_HL=Range (High-Low)
+MechDisplay.WeaponSortOrder.DAMAGE_LH=Damage (Low-High)
+MechDisplay.WeaponSortOrder.DAMAGE_HL=Damage (High-Low)
+MechDisplay.WeaponSortOrder.CUSTOM=Custom
 MechDisplay.willSwitchAtEnd={0} will switch to {1} at end of turn.
 MechDisplay.willSwitchAtStart={0} will switch to {1} at start of game.
 MechDisplay.activeSinksLabel=# of active Heat Sinks
