--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -59,6 +59,7 @@ v0.39.2-dev (SVN)
 + Feature [#1291] Phase 2: Can drag weapons into custom ordering in UnitDisplay
 + Bug: Princess adds junk messages to the log and chat for chat messages not directed at her.
 + Bug: Lockup in firing phase do to waiting for Princess to signal done.
++ Feature [#1291] Phase 2: Fixed bug with sort orders not saving between pahses
 
 v0.39.1 (2014-08-26 14:56 UTC)
 + Patch [#458]: Highlighting FOV options
