--- a/megamek/l10n/megamek/common/options/messages.properties
+++ b/megamek/l10n/megamek/common/options/messages.properties
@@ -763,5 +763,5 @@ WeaponQuirksInfo.option.jettison_capable.displayableName=Jettison-Capable Weapon
 WeaponQuirksInfo.option.jettison_capable.description=Weapon can be jettisoned and later recovered. \nNot yet implemented.
 WeaponQuirksInfo.option.fast_reload.displayableName=Fast Reload
 WeaponQuirksInfo.option.fast_reload.description=No game effect,\ncurrently.
-WeaponQuirksInfo.option.static_feed.displayName=Static Ammo Feed
+WeaponQuirksInfo.option.static_feed.displayableName=Static Ammo Feed
 WeaponQuirksInfo.option.static_feed.description=No game effect.\nNot yet implemented.
