+ Data: New Images/Few new Maps/fixed units

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -65,6 +65,7 @@ v0.39.2-dev (SVN)
 + Feature [#1296]: Give % remaining in /checkbv command
 + Bug: The phases that allow board saving were unnecessarily restrictive.  Now
     File>Board>Save is enabled in most phases besides the lounge/lobby
++ Data: New Images/Few new Maps/fixed units
 
 v0.39.1 (2014-08-26 14:56 UTC)
 + Patch [#458]: Highlighting FOV options
