+ Data: Unit fixes.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -66,6 +66,7 @@ v0.39.2-dev (SVN)
 + Bug: The phases that allow board saving were unnecessarily restrictive.  Now
     File>Board>Save is enabled in most phases besides the lounge/lobby
 + Data: New Images/Few new Maps/fixed units
++ Data: Unit fixes.
 
 v0.39.1 (2014-08-26 14:56 UTC)
 + Patch [#458]: Highlighting FOV options
