--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -69,6 +69,7 @@ v0.39.2-dev (SVN)
 + Data: Unit fixes
 + Bug: 2 NPEs related to weapon sort orders
 + Data: ProtoMek Fixes (Thanks GreekFire) and new Images.
++ Data: New Images
 
 v0.39.1 (2014-08-26 14:56 UTC)
 + Patch [#458]: Highlighting FOV options
