+ Added missing l10n entry for Strafing menu item

--- a/megamek/l10n/megamek/client/messages.properties
+++ b/megamek/l10n/megamek/client/messages.properties
@@ -417,6 +417,7 @@ CommonMenuBar.fireMode=Mode
 CommonMenuBar.fireNext=Next Unit
 CommonMenuBar.fireNextTarg=Next Target
 CommonMenuBar.fireSearchlight=Searchlight
+CommonMenuBar.fireStrafe=Strafe
 CommonMenuBar.fireSkip=Skip
 CommonMenuBar.fireSpot=Spot
 CommonMenuBar.fireTwist=Twist
