--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -2,6 +2,7 @@ VERSION HISTORY:
 ----------------
 v0.39.3-dev (SVN)
 + Bug [#4260]: Strafing: can designate the same hex twice
++ Bug: weapon sort order updates being sent to server too frequently
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
