--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -8,6 +8,7 @@ v0.39.3-dev (SVN)
 + Bug: Fixed two rare NPEs: one is issuing a skip command with a null entity
     while simultaneous phases are active and the other is related to
     disconnecting a client
++ Bug: Indirect artillery fire shouldn't be effected by light modifiers
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
