--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -10,6 +10,7 @@ v0.39.3-dev (SVN)
     disconnecting a client
 + Bug: Indirect artillery fire shouldn't be effected by light modifiers
 + Bug [#4147]: Fixed issues with searchlights, night, and one-sided LoS
++ Bug: UnitOverview legal unit highlighting issues with simultaneous phases
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
