--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -11,6 +11,7 @@ v0.39.3-dev (SVN)
 + Bug: Indirect artillery fire shouldn't be effected by light modifiers
 + Bug [#4147]: Fixed issues with searchlights, night, and one-sided LoS
 + Bug: UnitOverview legal unit highlighting issues with simultaneous phases
++ Bug [#4251]: Movement illegal with simultaneous movement
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
