--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -15,6 +15,7 @@ v0.39.3-dev (SVN)
 + Data: New Images
 + Bug [#4269]: MoveStep.getParent() not returning the correct MovePath
 + Bug [#4270]: Freeze/Lockup during firing phase
++ Bug [#4271]: No unit to move with mek lance movement
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
