--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -24,6 +24,7 @@ v0.39.3-dev (SVN)
 + Bug [#4257]: Added detailed BV calculation report for Protomechs
 + Bug [#4263]: Thunderbolt Missiles do half damage during strike run
 + Bug: Potential NPE with charge attacks
++ Bug [#4274]: Game Options Load doesn't update Sever's options
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
