--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -29,6 +29,9 @@ v0.39.3-dev (SVN)
 + Bug: Report phase chat boxes occassionally needed to hit enter twice to send
 + Bug: SHD Create/Edit Note dialog wouldn't disable key commands (ie. scrolling)
 + Data: New Images, Some unit name changes to eliminate quotation issues with Image Pack.
++ Bug: [#4267] Princess thread NPE - calculateMyTurn.
+       Added code to fail faster in the case of either being passed a null Entity or not being able to find an Entity
+       to move.  This doesn't resolve the issue, but should make it easier to trace down exactly which is happening.
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
