--- a/trunk/megamek/l10n/megamek/common/options/messages.properties
+++ b/trunk/megamek/l10n/megamek/common/options/messages.properties
@@ -210,6 +210,8 @@ GameOptionsInfo.option.tacops_start_fire.displayableName=TacOps Starting Fires
 GameOptionsInfo.option.tacops_start_fire.description=If checked,\nfires may be set accidentally or intentionally.
 GameOptionsInfo.option.tacops_range.displayableName=TacOps Extreme Range Rules
 GameOptionsInfo.option.tacops_range.description=If checked,\nWeapons have an extreme range bracket past their long range distance.
+GameOptionsInfo.option.tacops_los_range.displayableName=TacOps LOS Range Rules
+GameOptionsInfo.option.tacops_los_range.description=If checked,\nWeapons have a LOS range bracket past their extreme range distance.
 GameOptionsInfo.option.tacops_dead_zones.displayableName=TacOps Dead Zone Rule
 GameOptionsInfo.option.tacops_dead_zones.description=If checked,\nLOS can be blocked by dead zones,\nper the rule on TacOps,\npg.\n79-80 (not compatible with diagramming LOS rules)
 GameOptionsInfo.option.tacops_LOS1.displayableName=TacOps Diagramming Line of Sight Rules
