+ Refactored quirks to use static constants instead of string literals Part 2

--- a/megamek/l10n/megamek/common/options/messages.properties
+++ b/megamek/l10n/megamek/common/options/messages.properties
@@ -761,8 +761,8 @@ WeaponQuirksInfo.option.poor_cooling.displayableName=Poor Cooling Jacket
 WeaponQuirksInfo.option.poor_cooling.description=+1 to heat (SO pg 198)
 WeaponQuirksInfo.option.no_cooling.displayableName=No Cooling Jacket
 WeaponQuirksInfo.option.no_cooling.description=+2 to heat (SO pg 198)
-WeaponQuirksInfo.option.ammo_feed.displayableName=Ammo Feed Problem
-WeaponQuirksInfo.option.ammo_feed.description=Prone to jamming (SO pg 198)
+WeaponQuirksInfo.option.ammo_feed_problems.displayableName=Ammo Feed Problems
+WeaponQuirksInfo.option.ammo_feed_problems.description=Prone to jamming (SO pg 198)
 WeaponQuirksInfo.option.exposed_linkage.displayableName=Exposed Weapon Linkage
 WeaponQuirksInfo.option.exposed_linkage.description=This weapon takes a critical on a roll of 10+ if it's housing location is hit.\nNot yet implemented. (SO pg 198)
 WeaponQuirksInfo.option.em_interference.displayableName=EM Interference
