+ Bug [#4293]: Can only save custom weapon order orders, issues with saving     weapon sort orders (this will invalidate any currently saved weapon sort     orders)

--- a/megamek/l10n/megamek/client/messages.properties
+++ b/megamek/l10n/megamek/client/messages.properties
@@ -416,7 +416,7 @@ CommonMenuBar.fireClearWeaponJam=Clear Weapon Jam
 CommonMenuBar.fireMode=Mode
 CommonMenuBar.fireNext=Next Unit
 CommonMenuBar.fireNextTarg=Next Target
-CommonMenuBar.fireSaveWeapOrder=Save Custom Weapon Order
+CommonMenuBar.fireSaveWeapOrder=Save Weapon Order
 CommonMenuBar.fireSearchlight=Searchlight
 CommonMenuBar.fireStrafe=Strafe
 CommonMenuBar.fireSkip=Skip
