--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -72,6 +72,9 @@ v0.39.3-dev (SVN)
 + Bug [#4298]: Melee master ability doesn't grant an extra attack with a hatchet
 + Bug [#4299]: Power Reverse PSR on jumping mech
 + Data: New Images and Unit Names Fixes
++ Bug [#4293]: Can only save custom weapon order orders, issues with saving
+    weapon sort orders (this will invalidate any currently saved weapon sort
+    orders)
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
